--- a/frontend/src/components/gallery/gallery.css
+++ b/frontend/src/components/gallery/gallery.css
@@ -1,4 +1,4 @@
-.gallary {
+.gallery {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 16px;
@@ -6,37 +6,37 @@
 }
 
 @media (max-width: 1120px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(6, 1fr);
   }
 }
 
 @media (max-width: 990px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(5, 1fr);
   }
 }
 
 @media (max-width: 790px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media (max-width: 640px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media (max-width: 500px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 390px) {
-  .gallary {
+  .gallery {
     grid-template-columns: repeat(1, 1fr);
   }
 }
